--- a/app/src/main/res/layout/accueil.xml
+++ b/app/src/main/res/layout/accueil.xml
@@ -19,4 +19,14 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+
+    </android.support.v4.view.ViewPager>
 </android.support.design.widget.CoordinatorLayout>
