--- a/app/src/main/res/layout/accueil.xml
+++ b/app/src/main/res/layout/accueil.xml
@@ -1,27 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".activity.Home">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="@dimen/soixanteDix"
+        android:textAlignment="center"
+
+        >
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:id="@+id/toolbar"
+            android:layout_height="@dimen/soixanteDix">
+            <android.support.design.widget.TabLayout
+                android:textAlignment="center"
+                android:id="@+id/mytabs"
+                android:layout_width="180dp"
+                app:tabSelectedTextColor="@color/colorWhite"
+                app:tabGravity="fill"
+                android:layout_marginTop="60dp"
+                android:layout_marginLeft="90dp"
+                android:layout_height="40dp"
+                app:tabMode="fixed"
+                app:tabIndicatorColor="@color/colorWhite"
+                app:tabTextColor="@color/colorWhite"
+
+                />
+
+
+        </android.support.v7.widget.Toolbar>
+
+
+
+
+
+
 
     </android.support.design.widget.AppBarLayout>
 
+
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+        android:id="@+id/viewpagerw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
@@ -29,4 +49,5 @@
 
 
     </android.support.v4.view.ViewPager>
+    
 </android.support.design.widget.CoordinatorLayout>
