Mise en place du viewpager

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:background="@color/colorWhite"
-        tools:context=".activity.Home">
+        tools:context=".activity.Accueil">
 
         <android.support.design.widget.AppBarLayout
 
