--- a/app/src/main/res/layout/accueil.xml
+++ b/app/src/main/res/layout/accueil.xml
@@ -12,17 +12,17 @@
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:id="@+id/toolbar"
-            android:layout_height="@dimen/soixanteDix">
+            android:background="@color/colorRed"
+            android:layout_height="match_parent">
             <android.support.design.widget.TabLayout
                 android:textAlignment="center"
                 android:id="@+id/mytabs"
-                android:layout_width="180dp"
+                android:layout_width="match_parent"
                 app:tabSelectedTextColor="@color/colorWhite"
                 app:tabGravity="fill"
-                android:layout_marginTop="60dp"
-                android:layout_marginLeft="90dp"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 app:tabMode="fixed"
+
                 app:tabIndicatorColor="@color/colorWhite"
                 app:tabTextColor="@color/colorWhite"
 
@@ -34,7 +34,6 @@
         android:id="@+id/viewpagerw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
 
