Mise en place du button flotant

--- a/app/src/main/res/layout/accueil.xml
+++ b/app/src/main/res/layout/accueil.xml
@@ -39,4 +39,13 @@
 
     </android.support.v4.view.ViewPager>
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+
+        app:backgroundTint="@color/colorRed"
+
+        android:id="@+id/mapchanger"
+        app:srcCompat="@android:drawable/ic_menu_info_details"/>
 </android.support.design.widget.CoordinatorLayout>
