--- a/app/src/main/res/layout/sve_model.xml
+++ b/app/src/main/res/layout/sve_model.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorWhite"
-    app:cardElevation="@dimen/deux"
+    app:cardElevation="@dimen/one"
     android:layout_height="wrap_content">
 
     <RelativeLayout
