--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="soixanteDix">70dp</dimen>
     <dimen name="cinq">5dp</dimen>
     <dimen name="deux">2dp</dimen>
+    <dimen name="one">1dp</dimen>
 </resources>
