--- a/app/src/main/res/layout/activity_resultat_actitvity.xml
+++ b/app/src/main/res/layout/activity_resultat_actitvity.xml
@@ -6,31 +6,17 @@
     xmlns:tools="http://schemas.android.com/tools">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/soixanteDix"
-        android:textAlignment="center"
-
-        >
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
         <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_nve"
             android:layout_width="match_parent"
-            android:id="@+id/toolbar"
-            android:background="@color/colorRed"
-            android:layout_height="match_parent">
-            <android.support.design.widget.TabLayout
-                android:textAlignment="center"
-                android:id="@+id/mytabs"
-                android:layout_width="match_parent"
-                app:tabSelectedTextColor="@color/colorWhite"
-                app:tabGravity="fill"
-                android:layout_height="match_parent"
-                app:tabMode="fixed"
-
-                app:tabIndicatorColor="@color/colorWhite"
-                app:tabTextColor="@color/colorWhite"
-
-                />
-        </android.support.v7.widget.Toolbar>
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -49,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/anaNomPatient"/>
             <TextView
+                android:layout_below="@id/anaNomPatient"
                 android:layout_width="wrap_content"
                 android:id="@+id/anaResultat"
                 android:layout_height="wrap_content" />
